-Added a timer for 30 seconds because the api doesnt like too many request. -Added a filter for duplicate urls, although(rare) you will still get duplicate images

--- a/TODO
+++ b/TODO
@@ -12,4 +12,4 @@ if using praw4.4 wont be able to access reddit api
 
 
 
-implement machine learning????????????
+implement machine learning???????????? HAHAHAHAAHAHHA no.
